Adding an output table and more checks

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,6 @@
 [pipeline]
 obsidian_dir = test-files/obsidian-vault
 hugo_dir = test-files/hugo-content
+
+[frontmatter]
+required_fields = title, type
